# fuzzy_analytics_pipeline

./: .dockerignore  .env_example  .gitignore  Dockerfile  README.md  dagster.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  seed_mysql.py  workspace.yaml
.github/workflows/: ci.yml  ci1.yml
fuzzy_dbt/: .user.yml  dbt_project.yml  profiles.yml
fuzzy_dbt/models/: sources.yml
fuzzy_dbt/models/marts/: _marts_models.yml  fct_buyer_types.sql  fct_buyers_viewers.sql  fct_channel_stats_v2.sql  fct_channels_devices.sql  fct_channels_months.sql  fct_cohort_users.sql  fct_cvr_products.sql  fct_desktop_funnel.sql  fct_devices.sql  fct_devices_funnel.sql  fct_funnel.sql  fct_funnel_unpivot.sql  fct_hours_devices.sql  fct_human.sql  fct_mobile_funnel.sql  fct_overview_stats.sql  fct_pageview_stats.sql  fct_products_matrix12.sql  fct_products_matrix23.sql  fct_products_stats.sql  fct_refund_timing.sql  fct_repeated_buyers.sql  fct_repeated_buyers_channel.sql  mart_daily_orders.sql  mart_product_items.sql  mart_traffic_summary.sql
fuzzy_dbt/models/staging/: stg_order_item_refunds.sql  stg_order_items.sql  stg_orders.sql  stg_pageviews.sql  stg_products.sql  stg_sessions.sql  stg_website_pageviews.sql  stg_website_sessions.sql
src/: pipeline.py
