[project]
name = "fuzzy-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agate==1.9.1",
    "alembic==1.18.4",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "antlr4-python3-runtime==4.13.2",
    "anyio==4.13.0",
    "attrs==26.1.0",
    "babel==2.18.0",
    "backoff==2.2.1",
    "boto3==1.42.91",
    "botocore==1.42.91",
    "certifi==2026.2.25",
    "cffi==2.0.0",
    "charset-normalizer==3.4.7",
    "click==8.3.2",
    "colorama==0.4.6",
    "coloredlogs==14.0",
    "connectorx==0.4.5",
    "cryptography==46.0.7",
    "daff==1.4.2",
    "dagster==1.13.1",
    "dagster-aws==0.29.1",
    "dagster-dbt==0.29.1",
    "dagster-gcp==0.29.1",
    "dagster-graphql==1.13.1",
    "dagster-pandas==0.29.1",
    "dagster-pipes==1.13.1",
    "dagster-postgres>=0.29.1",
    "dagster-shared==1.13.1",
    "dagster-webserver==1.13.1",
    "db-dtypes==1.5.1",
    "dbt-adapters==1.22.10",
    "dbt-bigquery==1.11.1",
    "dbt-common==1.37.3",
    "dbt-core==1.11.8",
    "dbt-extractor==0.6.0",
    "dbt-protos==1.0.443",
    "dbt-semantic-interfaces==0.9.0",
    "deepdiff==8.6.2",
    "distro==1.9.0",
    "docstring-parser==0.18.0",
    "fastjsonschema==2.21.2",
    "filelock==3.28.0",
    "flake8==7.3.0",
    "fsspec==2026.3.0",
    "gitdb==4.0.12",
    "gitpython==3.1.46",
    "google-api-core==2.30.3",
    "google-api-python-client==2.194.0",
    "google-auth==2.49.2",
    "google-auth-httplib2==0.3.1",
    "google-auth-oauthlib==1.3.1",
    "google-cloud-aiplatform==1.148.1",
    "google-cloud-bigquery==3.41.0",
    "google-cloud-core==2.5.1",
    "google-cloud-dataproc==5.27.0",
    "google-cloud-resource-manager==1.17.0",
    "google-cloud-storage==3.1.1",
    "google-crc32c==1.8.0",
    "google-genai==1.73.1",
    "google-resumable-media==2.8.2",
    "googleapis-common-protos==1.74.0",
    "gql==4.0.0",
    "graphene==3.4.3",
    "graphql-core==3.2.8",
    "graphql-relay==3.2.0",
    "greenlet==3.4.0",
    "grpc-google-iam-v1==0.14.4",
    "grpcio==1.80.0",
    "grpcio-health-checking==1.80.0",
    "grpcio-status==1.80.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httplib2==0.31.2",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "humanfriendly==10.0",
    "idna==3.11",
    "importlib-metadata==8.9.0",
    "isodate==0.7.2",
    "jinja2==3.1.6",
    "jmespath==1.1.0",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "jupyter-core==5.9.1",
    "leather==0.4.1",
    "mako==1.3.11",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mashumaro==3.14",
    "mccabe==0.7.0",
    "mdurl==0.1.2",
    "more-itertools==10.8.0",
    "msgpack==1.1.2",
    "multidict==6.7.1",
    "nbformat==5.10.4",
    "networkx==3.6.1",
    "numpy==2.4.4",
    "oauth2client==4.1.3",
    "oauthlib==3.3.1",
    "orderly-set==5.5.0",
    "orjson==3.11.8",
    "packaging==26.1",
    "pandas==2.3.3",
    "pandas-gbq==0.35.0",
    "parsedatetime==2.6",
    "pathlib-abc==0.5.2",
    "pathspec==0.12.1",
    "pip==22.3.1",
    "platformdirs==4.9.6",
    "polars==1.40.0",
    "polars-runtime-32==1.40.0",
    "propcache==0.4.1",
    "proto-plus==1.27.2",
    "protobuf==6.33.6",
    "psutil==7.2.2",
    "psycopg2-binary>=2.9.12",
    "pyarrow==23.0.1",
    "pyasn1==0.6.3",
    "pyasn1-modules==0.4.2",
    "pycodestyle==2.14.0",
    "pycparser==3.0",
    "pydantic==2.13.2",
    "pydantic-core==2.46.2",
    "pydata-google-auth==1.9.1",
    "pyflakes==3.4.0",
    "pygments==2.20.0",
    "pymysql==1.1.2",
    "pyparsing==3.3.2",
    "pyreadline3==3.5.4 ; sys_platform == 'win32'",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "python-slugify==8.0.4",
    "pytimeparse==1.1.8",
    "pytz==2026.1.post1",
    "pywin32==311 ; sys_platform == 'win32'",
    "pyyaml==6.0.3",
    "referencing==0.37.0",
    "requests==2.33.1",
    "requests-oauthlib==2.0.0",
    "requests-toolbelt==1.0.0",
    "rich==15.0.0",
    "rpds-py==0.30.0",
    "rsa==4.9.1",
    "s3transfer==0.16.0",
    "setuptools==65.5.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "smmap==5.0.3",
    "sniffio==1.3.1",
    "snowplow-tracker==1.1.0",
    "sqlalchemy==2.0.49",
    "sqlglot==28.0.0",
    "sqlglotrs==0.7.3",
    "sqlparse==0.5.5",
    "starlette==1.0.0",
    "structlog==25.5.0",
    "tabulate==0.10.0",
    "tenacity==9.1.4",
    "text-unidecode==1.3",
    "tomli==2.4.1",
    "tomlkit==0.14.0",
    "toposort==1.10",
    "tqdm==4.67.3",
    "traitlets==5.14.3",
    "typer==0.24.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2026.1",
    "universal-pathlib==0.3.10",
    "uritemplate==4.2.0",
    "urllib3==2.6.3",
    "uv==0.11.7",
    "uvicorn==0.44.0",
    "watchdog==6.0.0",
    "watchfiles==1.1.1",
    "websockets==16.0",
    "yarl==1.23.0",
    "zipp==3.23.1",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
]
